--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "apollo-angular": "^5.0.2",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.13.0",
     "@apollo/client": "^3.0.0",
-    "graphql": "^16"
+    "apollo-angular": "^5.0.2",
+    "graphql": "^16",
+    "ngx-cookie-service": "^17.0.0",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.9",
@@ -36,6 +36,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tslib": "^2.6.2",
     "typescript": "~5.1.3"
   }
 }
